@@ -22,6 +22,7 @@
 - Fix: [#15170] Plugin: incorrect label text alignment.
 - Fix: [#15184] Crash when hovering over water types in Object Selection.
 - Fix: [#15193] Crash when rides/stalls are demolished.
+- Fix: [#15197] Cannot place flat ride after removing it in construction window.
 - Fix: [#15199] Construction window is not closed when a ride gets demolished.
 - Fix: [#15213] Freeze when hovering over Reverse Freefall Coaster in Russian.
 - Fix: [#15255] Tile Inspector shows banner information on walls that do not contain one.
